tests/semantic_errors/testcase01.c
// Missing main function

int main2(void) {
    return 0;
}